Add a QRect to showWindowMenu

This is so we don't have to rely on the cursor position for the popup

BUG: 393163